--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,6 +2,8 @@
     <string name="app_name">Quotes Love</string>
     <string name="action_settings">Settings</string>
 
+    <string name="linear_layout_manager" translatable="false">androidx.recyclerview.widget.LinearLayoutManager</string>
+
     <string name="no_connectivity_error">No Connectivity. Please check your Internet connection and try again.</string>
     <string name="no_connectivity_server_error">Server encountered an unexpected error or the site is under maintenance. Please try again later</string>
     <string name="detail_error_code_999">Unexpected error.</string>
