25_02_2021 Remove viewPage in LoveFragment

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -32,6 +32,7 @@
     <string name="action_tile_home">Thính thống trị</string>
     <string name="action_tile_info">Chúng mình nè!</string>
     <string name="action_tile_type_quote">Tác giả và thể loại</string>
+    <string name="action_tile_love">Thính độc</string>
 
     <string name="description_splash_screen">Độc dược tình yêu</string>
 
