28_04_2021 Add Data Module

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -36,4 +36,6 @@
 
     <string name="description_splash_screen">Độc dược tình yêu</string>
 
+    <string name="description_copy_quote">Đã Lưu Thính Vào Bộ Nhớ Tạm</string>
+
 </resources>
